:sparkles: add base mod structure

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -162,5 +162,69 @@
       "rankProgression": "XP",
       "rankName": "Rank"
     }
+  },
+  "mods": {
+    "title": "Mods",
+    "menu": "Mod Management",
+    "install": {
+      "title": "Install Mods",
+      "step1": "Select Mod Package",
+      "step2": "Read Mod Info",
+      "step3": "Install",
+      "select_file": "Select Mod File",
+      "file_format_note": "Only RWRMI format mods are supported",
+      "loading": "Loading...",
+      "instruction1": "Only mods packaged with this installer are supported",
+      "instruction2": "Mod files are typically named: [RWRMI][version]name v0.1.0.zip",
+      "instruction3": "Mod information is provided by the author",
+      "no_game_path": "Game path not configured",
+      "no_game_path_desc": "Please set your RWR installation directory first",
+      "back": "Back",
+      "next": "Next",
+      "reset": "Reset",
+      "title": "Title",
+      "description": "Description",
+      "version": "Version",
+      "game_version": "Game Version",
+      "authors": "Authors",
+      "file_list": "File List",
+      "readme": "README",
+      "changelog": "CHANGELOG",
+      "close": "Close",
+      "target_path": "Target Path",
+      "backup_option": "Backup original files before installation",
+      "overwrite_option": "Overwrite existing files",
+      "install": "Install",
+      "installing": "Installing...",
+      "backup_section": "Backup & Recovery",
+      "backup": "Backup",
+      "recover": "Recover Backup",
+      "backup_note": "Only one backup is retained. Second backup will overwrite the first."
+    },
+    "bundle": {
+      "title": "Bundle Mods",
+      "description": "Package mods for distribution",
+      "bundle": "Bundle",
+      "generate_config": "Generate Default Config",
+      "structure_title": "Structure (all required)",
+      "media_folder": "Mod resources folder",
+      "readme_file": "Usage documentation",
+      "changelog_file": "Change log",
+      "config_file": "Configuration file",
+      "config_format": "Config Format",
+      "config_fields": "Required fields",
+      "field_title": "Mod title",
+      "field_description": "Mod description",
+      "field_authors": "Mod authors (array)",
+      "field_version": "Mod version",
+      "field_game_version": "Supported game version",
+      "config_example": "Example structure",
+      "working_principle": "How It Works",
+      "step1": "Package folder into zip file",
+      "step2": "Read config.json for metadata",
+      "step3": "Include README.md as documentation",
+      "step4": "Include CHANGELOG.md for version history",
+      "step5": "Extract media/ folder to game directory"
+    }
   }
 }
