--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -162,5 +162,69 @@
       "rankProgression": "经验",
       "rankName": "军衔"
     }
+  },
+  "mods": {
+    "title": "模组",
+    "menu": "模组管理",
+    "install": {
+      "title": "安装模组",
+      "step1": "选择模组包",
+      "step2": "读取模组信息",
+      "step3": "安装",
+      "select_file": "选择模组文件",
+      "file_format_note": "仅支持 RWRMI 格式的模组",
+      "loading": "加载中...",
+      "instruction1": "仅支持使用本安装器打包的模组",
+      "instruction2": "模组文件通常命名为：[RWRMI][版本]名称 v0.1.0.zip",
+      "instruction3": "模组信息由作者提供",
+      "no_game_path": "未配置游戏路径",
+      "no_game_path_desc": "请先设置您的 RWR 安装目录",
+      "back": "上一步",
+      "next": "下一步",
+      "reset": "重置",
+      "title": "标题",
+      "description": "描述",
+      "version": "版本",
+      "game_version": "游戏版本",
+      "authors": "作者",
+      "file_list": "文件列表",
+      "readme": "说明文件",
+      "changelog": "更新日志",
+      "close": "关闭",
+      "target_path": "目标路径",
+      "backup_option": "安装前备份原始文件",
+      "overwrite_option": "覆盖已存在的文件",
+      "install": "安装",
+      "installing": "安装中...",
+      "backup_section": "备份与恢复",
+      "backup": "备份",
+      "recover": "恢复备份",
+      "backup_note": "仅保留一份备份。二次备份会覆盖第一次备份。"
+    },
+    "bundle": {
+      "title": "打包模组",
+      "description": "打包模组用于分发",
+      "bundle": "打包",
+      "generate_config": "生成默认配置",
+      "structure_title": "结构说明（全部必需）",
+      "media_folder": "模组资源文件夹",
+      "readme_file": "使用说明文档",
+      "changelog_file": "版本更新日志",
+      "config_file": "配置文件",
+      "config_format": "配置格式",
+      "config_fields": "必需字段",
+      "field_title": "模组标题",
+      "field_description": "模组描述",
+      "field_authors": "模组作者（数组）",
+      "field_version": "模组版本",
+      "field_game_version": "支持的游戏版本",
+      "config_example": "结构示例",
+      "working_principle": "工作原理",
+      "step1": "将文件夹打包成 zip 文件",
+      "step2": "读取 config.json 获取元数据",
+      "step3": "包含 README.md 作为说明文档",
+      "step4": "包含 CHANGELOG.md 记录版本历史",
+      "step5": "将 media/ 文件夹解压到游戏目录"
+    }
   }
 }
