:sparkles: complete mod install fn

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,12 +19,12 @@
     "extract_desc": "Extract game resources",
     "workshop": "Workshop",
     "workshop_desc": "View workshop content",
-    "mods": "Mods",
-    "mods_desc": "Manage game modifications",
+    "mods": "Local Mods",
+    "mods_desc": "Manage local mods (replace game files)",
     "install": "Install",
-    "install_desc": "Install mods to game",
+    "install_desc": "Install local mods to game directory",
     "bundle": "Bundle",
-    "bundle_desc": "Package mods for distribution",
+    "bundle_desc": "Package local mods for distribution",
     "hotkeys": "Hotkeys",
     "hotkeys_desc": "Configure keyboard shortcuts",
     "settings": "Settings",
@@ -164,11 +164,11 @@
     }
   },
   "mods": {
-    "title": "Mods",
-    "menu": "Mod Management",
+    "title": "Local Mods",
+    "menu": "Local Mod Management",
     "install": {
-      "title": "Install Mods",
-      "step1": "Select Mod Package",
+      "title": "Install Local Mods",
+      "step1": "Select Local Mod Package",
       "step2": "Read Mod Info",
       "step3": "Install",
       "select_file": "Select Mod File",
@@ -182,7 +182,7 @@
       "back": "Back",
       "next": "Next",
       "reset": "Reset",
-      "title": "Title",
+      "field_title": "Title",
       "description": "Description",
       "version": "Version",
       "game_version": "Game Version",
@@ -202,8 +202,8 @@
       "backup_note": "Only one backup is retained. Second backup will overwrite the first."
     },
     "bundle": {
-      "title": "Bundle Mods",
-      "description": "Package mods for distribution",
+      "title": "Bundle Local Mods",
+      "description": "Package local mods for distribution",
       "bundle": "Bundle",
       "generate_config": "Generate Default Config",
       "structure_title": "Structure (all required)",
