--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -19,12 +19,12 @@
     "extract_desc": "提取 game 资源",
     "workshop": "创意工坊",
     "workshop_desc": "查看创意工坊内容",
-    "mods": "模组",
-    "mods_desc": "管理游戏模组",
+    "mods": "本地模组",
+    "mods_desc": "管理本地游戏模组（替换游戏文件）",
     "install": "安装",
-    "install_desc": "安装模组到游戏",
+    "install_desc": "安装本地模组到游戏目录",
     "bundle": "打包",
-    "bundle_desc": "打包模组用于分发",
+    "bundle_desc": "打包本地模组用于分发",
     "hotkeys": "快捷键",
     "hotkeys_desc": "配置键盘快捷键",
     "settings": "设置",
@@ -164,11 +164,11 @@
     }
   },
   "mods": {
-    "title": "模组",
-    "menu": "模组管理",
+    "title": "本地模组",
+    "menu": "本地模组管理",
     "install": {
-      "title": "安装模组",
-      "step1": "选择模组包",
+      "title": "安装本地模组",
+      "step1": "选择本地模组包",
       "step2": "读取模组信息",
       "step3": "安装",
       "select_file": "选择模组文件",
@@ -182,7 +182,7 @@
       "back": "上一步",
       "next": "下一步",
       "reset": "重置",
-      "title": "标题",
+      "field_title": "标题",
       "description": "描述",
       "version": "版本",
       "game_version": "游戏版本",
@@ -202,8 +202,8 @@
       "backup_note": "仅保留一份备份。二次备份会覆盖第一次备份。"
     },
     "bundle": {
-      "title": "打包模组",
-      "description": "打包模组用于分发",
+      "title": "打包本地模组",
+      "description": "打包本地模组用于分发",
       "bundle": "打包",
       "generate_config": "生成默认配置",
       "structure_title": "结构说明（全部必需）",
