:sparkles: add base hotkey editor fn

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -226,5 +226,51 @@
       "step4": "Include CHANGELOG.md for version history",
       "step5": "Extract media/ folder to game directory"
     }
+  },
+  "hotkeys": {
+    "no_game_path": "Game Path Not Configured",
+    "no_game_path_desc": "Please set the game path in Settings first.",
+    "tab_read": "Read",
+    "tab_profiles": "Profiles",
+    "read_title": "Read Hotkeys from Game",
+    "read_desc": "Read current hotkey configuration from game directory.",
+    "loading": "Loading...",
+    "read_from_game": "Read from Game",
+    "create_profile": "Create Profile",
+    "import_profile": "Import Profile",
+    "edit": "Edit",
+    "edit_profile": "Edit Profile",
+    "update": "Update",
+    "hotkeys_count": "{{ count }} hotkeys",
+    "updated_at": "Updated: {{ date }}",
+    "apply_to_game": "Apply to Game",
+    "export": "Export",
+    "delete": "Delete",
+    "no_profiles": "No profiles yet. Read from game or create one.",
+    "conflicts_detected": "Conflicts Detected",
+    "label": "Label",
+    "key_combination": "Key Combination",
+    "actions": "Actions",
+    "profile_title": "Profile Title",
+    "profile_title_placeholder": "My Custom Hotkeys",
+    "cancel": "Cancel",
+    "create": "Create",
+    "confirm_delete": "Confirm Delete",
+    "confirm_delete_desc": "Are you sure you want to delete this profile? This action cannot be undone.",
+    "share": "Share",
+    "import_from_clipboard": "Import from Clipboard",
+    "import_success": "Import Successful!",
+    "import_success_desc": "The profile has been added to your collection.",
+    "share_success": "Copied to Clipboard!",
+    "share_success_desc": "Profile copied to clipboard. You can now share it with others.",
+    "open_in_editor": "Open in Editor",
+    "current_hotkeys": "Current Game Hotkeys",
+    "hotkeys_list": "Hotkeys List",
+    "add_hotkey": "Add Hotkey",
+    "no_hotkeys_yet": "No hotkeys yet. Click 'Add Hotkey' to create one.",
+    "remark": "Remark",
+    "content": "Content",
+    "remark_placeholder": "Function name (e.g., Jump, Fire)",
+    "content_placeholder": "Key combination (e.g., Space, Ctrl+C)"
   }
 }
