--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -226,5 +226,51 @@
       "step4": "包含 CHANGELOG.md 记录版本历史",
       "step5": "将 media/ 文件夹解压到游戏目录"
     }
+  },
+  "hotkeys": {
+    "no_game_path": "未配置游戏路径",
+    "no_game_path_desc": "请先在设置中设置游戏路径。",
+    "tab_read": "读取",
+    "tab_profiles": "配置方案",
+    "read_title": "从游戏读取热键",
+    "read_desc": "从游戏目录读取当前热键配置。",
+    "loading": "加载中...",
+    "read_from_game": "从游戏读取",
+    "create_profile": "创建方案",
+    "import_profile": "导入方案",
+    "edit": "编辑",
+    "edit_profile": "编辑方案",
+    "update": "更新",
+    "hotkeys_count": "{{ count }} 个热键",
+    "updated_at": "更新：{{ date }}",
+    "apply_to_game": "应用到游戏",
+    "export": "导出",
+    "delete": "删除",
+    "no_profiles": "暂无配置方案。请从游戏读取或创建新方案。",
+    "conflicts_detected": "检测到冲突",
+    "label": "标签",
+    "key_combination": "按键组合",
+    "actions": "操作",
+    "profile_title": "方案标题",
+    "profile_title_placeholder": "我的自定义热键",
+    "cancel": "取消",
+    "create": "创建",
+    "confirm_delete": "确认删除",
+    "confirm_delete_desc": "您确定要删除此方案吗？此操作无法撤销。",
+    "share": "分享",
+    "import_from_clipboard": "从剪贴板导入",
+    "import_success": "导入成功！",
+    "import_success_desc": "配置方案已添加到您的收藏。",
+    "share_success": "已复制到剪贴板！",
+    "share_success_desc": "配置方案已复制到剪贴板，您可以分享给其他用户。",
+    "open_in_editor": "外部编辑器",
+    "current_hotkeys": "当前游戏热键",
+    "hotkeys_list": "热键列表",
+    "add_hotkey": "添加热键",
+    "no_hotkeys_yet": "暂无热键。点击\"添加热键\"创建。",
+    "remark": "备注",
+    "content": "内容",
+    "remark_placeholder": "功能名称(如: 跳跃、开火)",
+    "content_placeholder": "按键组合(如: 空格、Ctrl+C)"
   }
 }
