:sparkles: add page size changer for data

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -337,6 +337,12 @@
         "search": "Search weapons...",
         "advancedSearch": "Advanced Search",
         "clearFilters": "Clear Filters",
+        "page_size": "Per Page",
+        "page_size_25": "25",
+        "page_size_50": "50",
+        "page_size_100": "100",
+        "page_size_200": "200",
+        "pagination_info": "Showing {{ start }} to {{ end }} of {{ total }} weapons",
         "weaponCount": "{{count}} weapons",
         "noWeapons": "No weapons found",
         "scanning": "Scanning weapons...",
@@ -419,6 +425,12 @@
         "search": "Search items...",
         "advancedSearch": "Advanced Search",
         "clearFilters": "Clear Filters",
+        "page_size": "Per Page",
+        "page_size_25": "25",
+        "page_size_50": "50",
+        "page_size_100": "100",
+        "page_size_200": "200",
+        "pagination_info": "Showing {{ start }} to {{ end }} of {{ total }} items",
         "itemCount": "{{count}} items",
         "noItems": "No items found",
         "scanning": "Scanning items...",
