--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -337,6 +337,12 @@
         "search": "搜索武器...",
         "advancedSearch": "高级搜索",
         "clearFilters": "清除筛选",
+        "page_size": "每页",
+        "page_size_25": "25",
+        "page_size_50": "50",
+        "page_size_100": "100",
+        "page_size_200": "200",
+        "pagination_info": "显示第 {{ start }} - {{ end }} 条，共 {{ total }} 条武器",
         "weaponCount": "{{count}} 个武器",
         "noWeapons": "未找到武器",
         "scanning": "正在扫描武器...",
@@ -419,6 +425,12 @@
         "search": "搜索物品...",
         "advancedSearch": "高级搜索",
         "clearFilters": "清除筛选",
+        "page_size": "每页",
+        "page_size_25": "25",
+        "page_size_50": "50",
+        "page_size_100": "100",
+        "page_size_200": "200",
+        "pagination_info": "显示第 {{ start }} - {{ end }} 条，共 {{ total }} 条物品",
         "itemCount": "{{count}} 个物品",
         "noItems": "未找到物品",
         "scanning": "正在扫描物品...",
