--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -283,6 +283,7 @@
         }
     },
     "hotkeys": {
+        "game_path": "游戏路径",
         "no_game_path": "未配置游戏路径",
         "no_game_path_desc": "请先在设置中设置游戏路径。",
         "tab_read": "读取",
