:bug: fixed data initial loading state

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,6 +89,7 @@
         "noDirectories": "No directories configured yet",
         "lastScanned": "Last scanned: {{ date }}",
         "packageCount": "{{ count }} packages",
+        "packageCount_one": "{{ count }} package",
         "itemCount": "{{ count }} items",
         "activeDirectory": "Active - included in scans",
         "inactiveDirectory": "Inactive - excluded from scans",
