--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -396,6 +396,9 @@
         "import_from_clipboard": "从剪贴板导入",
         "import_success": "导入成功！",
         "import_success_desc": "配置方案已添加到您的收藏。",
+        "import_invalid_format": "格式无效",
+        "clipboard_empty": "剪贴板为空",
+        "import_failed": "导入失败",
         "share_success": "已复制到剪贴板！",
         "share_success_desc": "配置方案已复制到剪贴板，您可以分享给其他用户。",
         "open_in_editor": "外部编辑器",
@@ -406,7 +409,7 @@
         "remark": "备注",
         "content": "内容",
         "remark_placeholder": "功能名称(如: 跳跃、开火)",
-        "content_placeholder": "按键组合(如: 空格、Ctrl+C)"
+        "content_placeholder": "/skill"
     },
     "weapons": {
         "title": "武器",
